# turno

./: .gitignore  README.md  admin.js  combos.html  como-comprar.html  config.js  contacto.html  database.js  index.html  nosotros.html  por-mayor.html  producto.html  productos.html  productos.js  robots.txt  script.js  styles.css  turnos_plus_ui_html_login_registro_perfil_calendario_y_horarios.html
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2a29c9f307a0_remove_slots_from_availability.py  a9bb91401c4c_initial_schema.py  d3e8c679b5ca_add_appointment_block_system.py  d902393a116e_add_office_id_to_doctors_simple.py
backend/scripts/: run_use_case_flows.py  test_api_endpoints.py  test_doctor_office_assignment.py
backend/src/app/: main.py
backend/src/app/api/: v1.py
backend/src/app/controllers/: admins.py  appointments.py  doctors.py  medical_records.py  offices.py  patients.py  system_settings.py  users.py
backend/src/app/db/: __init__.py  base.py  broker.py  settings.py
backend/src/app/models/: __init__.py  admin.py  appointment.py  appointment_block.py  availability.py  doctor.py  enums.py  medical_record.py  office.py  patient.py  system_settings.py  user.py
backend/src/app/repositories/: appointments.py
backend/src/app/schemas/: appointment.py  auth.py  medical_record.py  office.py  system_settings.py  user.py
backend/src/app/services/: admins.py  appointments.py  doctors.py  medical_records.py  offices.py  patients.py  users.py  (+1 more)
(+147 files in other folders)
