[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
]
